--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@
 
 */
 
+/**************** HEX color codes****************/
+:root {
+	--gray: #686F71;
+	--medium: #86ACB5;
+	--dark: #2C3D40;
+
+}
+
+/***************** HTML, Body ******************/
+
 html {
 	font-family: helvetica;
 	width: 100%;
@@ -21,33 +31,54 @@ body {
 	padding: 0;
 }
 
-/* Text formatting for titles of each individual section on the page*/
+/***************** Text Formatting ******************/
+
+/* Titles of each individual section on the page*/
 h3 {
 	font-size: 25px;
-	color: #86ACB5;
+	color: var(--medium);
 	text-align: left;
 	letter-spacing: 1px;
 	word-spacing: 2px;
-	padding-bottom: 50px;
+	margin-bottom: 18px;
 }
 
 
-/* Text formatting for navigation bar + footer */
-.outerText{
+/* Links in navigation bar + footer */
+.outerLinks{
 	word-spacing: 8px;
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	font-size: 12px;
 }
 
-/*Text formatting for copy inside body of page */
+/* Non-links in nav bar + footer*/
+.outerText{
+	color: white;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	font-size: 12px;
+}
+
+/* Text inside body of page */
 .insideText {
-	margin-top: 16px;
-	margin-bottom: -8px;
+	margin-top: 5px;
+	margin-bottom: 10px;
 	font-size: 16px;
-	color: #2C3D40
+	color: var(--dark);
 	text-align: left;
 	line-height: 27px;
+}
+
+
+/* Goes below the text inside body for decoration */
+.line{
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	border-top: 1px solid var(--medium);
+	/*min-width: auto;*/
+	
 }
 
 /*
@@ -74,15 +105,6 @@ h3 {
 	transform-origin: 0% 0%;
 }*/
 
-.line{
-	margin-top: 30px;
-	margin-left: auto;
-	margin-right: auto;
-	border-top: 1px solid #86ACB5;
-	/*min-width: auto;*/
-	
-}
-
 
 /**************** Navigation Bar ****************/
 .nav {
@@ -91,7 +113,7 @@ h3 {
 	left: 0;
 	right: 0;
 	width: 100%;
-	background: #86ACB5;
+	background: var(--medium);
 
 }
 
@@ -105,10 +127,17 @@ h3 {
 	display: inline;
 }
 
-/* Change the color of the current nav page link*/
-.nav li a:active{
-	color: black;
+li.active a {
+	color: var(--dark);
+	font-weight: 500px;
 }
+
+.nav .outerText{
+	padding-left: 20px;
+	margin-top: 12px;
+	float:left;
+}
+
 
 /**************** Header ****************/
 /*Includes title + description */
@@ -118,8 +147,9 @@ h3 {
 	padding-bottom: 100px;
 	display: block;
 	text-align: center;
-	background-color: #686F71;
+	background-color: var(--gray);
 	color: white;
+	height: 116px;
 }
 
 .header h1 {
@@ -135,37 +165,39 @@ h3 {
 }
 
 /*************** About ****************/
-.about {
-	margin-top;
+.mainContent {
+	margin-top: auto;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: auto;
 	padding-left: 100px;
 	padding-right: 100px;
-	padding-top:100px;
+	padding-top: 100px;
 	padding-bottom: 100px;
 	max-width: 800px;
 }
 
-.about h3{
-	margin: 0;
-	padding: 0;
+/*************** Resume ****************/
 
-}
+
+/*************** Projects ****************/
+
+/*************** Photography ****************/
+
+
+/*************** Contact ****************/
+
+
 
 /**************** Footer ****************/
 #footer {
-	background: #86ACB5;
+	background: var(--medium);
 	padding: 20px 20px 30px 20px;
-	color: white;
 	position: fixed;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 12px;
 }
 
 .contactLinks {
@@ -180,6 +212,85 @@ a {
 }
 
 a:hover {
-	color: #2C3D40;
+	color: var(--dark);
 }
+
+/**************** Forms ****************/
+.formText{
+	font-size: 18px;
+	color: var(--medium);
+	letter-spacing: 1px;
+	word-spacing: 1px;
+	display: inline;
+	
+}
+
+.inputSmall{
+	width: 48%;
+}
+
+.rightText {
+	margin-left: 43%;
+}
+
+input[type=text]{
+	color: var(--dark);
+	font-size: 14px;
+	border: 1px solid var(--medium);	
+	padding: 5px;
+	display: inline-block;
+	outline: none;
+
+	margin-top:5px;
+	margin-bottom:15px;
+}
+
+
+.inputBig{
+	color: var(--dark);
+	font-size: 14px;
+	border: 1px solid var(--medium);
+	width: 98.5%;
+	height: 50px;
+	
+	padding: 5px;
+	outline: none;
+	margin-top:5px;
+	margin-bottom:10px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+input[type=submit]{
+	color: white;
+	font-size: 16px;
+	background-color: var(--medium);
+	margin-top:8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	box-shadow: none;
+
+}
+
+input[type=submit]:hover{
+	color: var(--dark);
+
+}
+
+textarea {
+	resize: vertical;
+
+}
+
+
+
+
+
+
+
+
+
+
 
