--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 h3 {
 	font-size: 25px;
 	color: var(--medium);
-	text-align: left;
+	text-align: justify;
 	letter-spacing: 1px;
 	word-spacing: 2px;
 	margin-bottom: 18px;
@@ -63,17 +63,17 @@ h3 {
 /* Text inside body of page */
 .insideText {
 	margin-top: 5px;
-	margin-bottom: 10px;
-	font-size: 16px;
+	margin-bottom: 15px;
+	font-size: 18px;
 	color: var(--dark);
 	text-align: left;
-	line-height: 27px;
+	line-height: 30px;
 }
 
 
 /* Goes below the text inside body for decoration */
 .line{
-	margin-top: 30px;
+	margin-top: 35px;
 	margin-left: auto;
 	margin-right: auto;
 	border-top: 1px solid var(--medium);
@@ -172,7 +172,7 @@ li.active a {
 	margin-bottom: auto;
 	padding-left: 100px;
 	padding-right: 100px;
-	padding-top: 100px;
+	padding-top: 50px;
 	padding-bottom: 100px;
 	max-width: 800px;
 }
@@ -206,13 +206,28 @@ li.active a {
 }
 
 /**************** Links ****************/
-a {
+.nav a,
+.contactLinks a 
+{
 	color: white;
 	text-decoration: none;
 }
 
-a:hover {
+.nav a:hover ,
+.contactLinks a:hover
+{
 	color: var(--dark);
+}
+
+.insideText a {
+	color: var(--medium);
+	text-decoration: none;
+
+}
+
+.insideText a:hover {
+	font-weight: bold;
+	letter-spacing: 1px;
 }
 
 /**************** Forms ****************/
@@ -244,10 +259,19 @@ a:hover {
 	letter-spacing: 1px;
 	word-spacing: 1px;
 	display: inline;
+	padding-top: 15px;
 	
 }
 
-input[type=text]{
+.center {
+	display: block;
+	margin: 0 auto;
+	width: 20%
+}
+
+input[type=text],
+input[type=email]
+{
 	color: var(--dark);
 	font-size: 14px;
 	border: 1px solid var(--medium);	
@@ -280,17 +304,17 @@ input[type=submit]{
 	color: white;
 	font-size: 16px;
 	background-color: var(--medium);
-	margin-top:8px;
+	margin-top:1px;
 	padding-left: 10px;
 	padding-right: 10px;
-	padding-top: 8px;
-	padding-bottom: 8px;
+	padding-top: 12px;
+	padding-bottom: 12px;
 	box-shadow: none;
 
 }
 
 input[type=submit]:hover{
-	color: var(--dark);
+	background-color: var(--dark);
 
 }
 
