--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ footer a:hover
 	font-weight: 500;
 }
 
-
 /**************** Header ****************/
 header {
 	position: fixed;
@@ -163,7 +162,6 @@ header nav li.active a {
 
 /*************** About: Bullets ****************/
 
-
 .bulletContainer{
 	padding-top:50px;
 	padding-left: 25px;
@@ -202,77 +200,6 @@ header nav li.active a {
 	color: var(--dark);
 	font-size: 22px;
 	line-height: 55px;
-}
-
-.responsiveContainer{
-	text-align: center;
-	margin: 0 auto;
-}
-
-#responsiveBullets{
-	padding-top: 50px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-#responsiveBullets .leftText
-{
-	text-align: center;
-	line-height: 20px;
-	padding-bottom: 10px;
-	font-size: 20px;
-}
-
-#responsiveBullets .rightText
-{
-	line-height: 18px;
-	padding-bottom: 30px;
-	font-size: 18px;
-}
-
-#responsiveBullets .line{
-	width: 80%;
-}
-
-/*List style*/
-#about-bullets .container{
-	margin:0;
-	width: 100%;
-	padding-top:50px;
-}
-
-/*List formatting for left col*/
-#about-bullets .container .col1 li{
-	color: var(--medium);
-	font-size: 18px;
-	text-transform: uppercase;
-	word-spacing: 2px;
-	letter-spacing: 3px;
-	font-weight: 300;
-	font-size: 30px;
-	line-height: 60px;
-	text-align: right;
-	
-	/*padding-right: 5px;*/
-}
-
-/*List formatting for right col*/
-#about-bullets .container .col2 li {
-	list-style-type: none;
-	color: var(--dark);
-	font-size: 22px;
-	line-height: 60px;
-}
-
-#about-bullets .container .col1
-{
-	float: left;
-	width: 42%;
-}
-
-#about-bullets .container .col2{
-	float: right;
-	width: 56%;
 }
 
 /*Line divider between about-bullets and next section*/
@@ -350,8 +277,65 @@ footer {
 	
 }
 
-
 /**************** Responsive Design  ****************/
+.responsiveContainer{
+	text-align: center;
+	margin: 0 auto;
+}
+
+#responsiveBullets{
+	padding-top: 50px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+#responsiveBullets .leftText
+{
+	text-align: center;
+	line-height: 20px;
+	padding-bottom: 10px;
+	font-size: 20px;
+}
+
+#responsiveBullets .rightText
+{
+	line-height: 18px;
+	padding-bottom: 30px;
+	font-size: 18px;
+}
+
+#responsiveBullets .line{
+	width: 80%;
+}
+
+/**************** Social Media Icons ****************/
+.socicon-mail, .socicon-linkedin, .socicon-github{
+	color: white;
+	padding-right: 10px;
+}
+
+.socicon-mail{
+	position: relative;
+	top: 2px;
+}
+
+.socialMediaIcons{
+	text-align: center;
+	font-size: 16px;
+}
+
+.socicon-mail:hover, .socicon-linkedin:hover, .socicon-github:hover {
+	color: var(--dark);
+}
+
+footer h1 a{
+	letter-spacing: 5px;
+	word-spacing:3px;
+	font-size: 10px;
+	text-transform: uppercase;
+	font-weight: normal;
+}
+
 
 @media all and (max-width:950px) { /*850*/
 	
@@ -372,6 +356,12 @@ footer {
 		padding-bottom: 5px;
 		padding-top: 10px;
 	}
+	
+	header nav li{
+		line-height: 20px;
+		padding-left: 5px;
+	}
+
 
 	header h1, footer h1
 	{
@@ -384,13 +374,13 @@ footer {
 	header h1{
 		font-size: 20px;
 		padding-bottom: 10px;
-	
 	}
 	
 	footer h1{
 		font-size: 10px;
 		padding-bottom: 10px;
 		text-align: center;
+		line-height: 16px;
 	}
 	
 	footer, footer a, footer li, footer ul
@@ -483,6 +473,12 @@ footer {
 	.mainContent{
 		width: 80%;
 	}
+	
+	.socialLinks{
+			display: none;
+		}
+		
+
 
 }
 
@@ -514,6 +510,10 @@ footer {
 	
 @media all and (min-width:950px){
 		#responsiveBullets {
+			display: none;
+		}
+		
+		.socialMediaIcons{
 			display: none;
 		}
 
