--- a/style.css
+++ b/style.css
@@ -311,7 +311,10 @@ footer {
 /**************** Social Media Icons ****************/
 .socicon-mail, .socicon-linkedin, .socicon-github{
 	color: white;
-	padding-right: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-bottom: 10px;
+	font-size: 20px;
 }
 
 .socicon-mail{
@@ -321,7 +324,6 @@ footer {
 
 .socialMediaIcons{
 	text-align: center;
-	font-size: 16px;
 }
 
 .socicon-mail:hover, .socicon-linkedin:hover, .socicon-github:hover {
@@ -378,7 +380,7 @@ footer h1 a{
 	
 	footer h1{
 		font-size: 10px;
-		padding-bottom: 10px;
+		padding-bottom: 12px;
 		text-align: center;
 		line-height: 16px;
 	}
